# mymarkup

./: pyproject.toml
src/mymarkup/: __init__.py  __main__.py  mymarkup.py  styles.css  template.html  tests.py
