[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mymarkup"
version = "0.1.4"
description = "mymarkup package"
requires-python = ">=3.9"

[project.scripts]
mymarkup = "mymarkup.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
mymarkup = ["styles.css", "template.html"]

[tool.setuptools.packages.find]
where = ["src"]
